first section done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="assainment1.css" />
   </head>
   <body>
-     
-      <section class="banner-container">
+    <section class="banner-container">
+      <div class="banner-content container">
         <h2 class="title">
           <strong>
-            All Thinks Are <br />
-            Possible If You <br />
-            believe
+            All Thinks Are <br>
+            Possible If You <br>
+            believe 
           </strong>
         </h2>
         <p class="text">
@@ -23,8 +23,7 @@
           form, by injected humour, or randomised words
         </p>
         <button class="banner-button">Contact Us</button>
-
-      </section>
-    
+      </div>
+    </section>
   </body>
 </html>
