finish this assignment

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="banner-content container">
         <h2 class="title">
           <strong>
-            All Thinks Are <br>
-            Possible If You <br>
-            believe 
+            All Thinks Are <br />
+            Possible If You <br />
+            believe
           </strong>
         </h2>
         <p class="text">
@@ -23,6 +23,102 @@
           form, by injected humour, or randomised words
         </p>
         <button class="banner-button">Contact Us</button>
+      </div>
+    </section>
+    <section>
+      <div class="second-container">
+        <div class="">
+          <img src="./images/person.png" alt="" />
+        </div>
+        <div class="style">
+          <h2 class="title-text">
+            My failures <br />
+            of previous year
+          </h2>
+          <p style="font-size: 19px; margin-bottom: 30px">
+            Contrary to popular belief, Lorem Ipsum is not <br />
+            simply random text. It has roots in a piece of <br />
+            classical Latin literature from 45 BC, making it over <br />
+            2000 years old. Richard McClintock.
+          </p>
+          <ul style="font-size: 18px">
+            <li>Contrary to popular simply.</li>
+            <li>Contrary to popular belief, is not simply.</li>
+            <li>Contrary to popular belief.</li>
+            <li>Contrary to popular , is not simply.</li>
+            <li>Contrary to popular belief, is not simply.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h2 class="third-title">My Plans</h2>
+      <div class="about-info-container">
+        <div class="about-info">
+          <img src="./images/icons/web.png" alt="" />
+          <p class="info-title">Web Development</p>
+          <p class="info-description">I want to start</p>
+        </div>
+        <div class="about-info">
+          <img src="./images/icons/js.png" alt="" />
+          <p class="info-title">Javascript</p>
+          <p class="info-description">I want to learn</p>
+        </div>
+        <div class="about-info">
+          <img src="./images/icons/smoke.png" alt="" />
+          <p class="info-title">Smoking Habit</p>
+          <p class="info-description">I want to end</p>
+        </div>
+        <div class="about-info">
+          <img src="./images/icons/ecom.png" alt="" />
+          <p class="info-title">Ecommerce</p>
+          <p class="info-description">I want to develop</p>
+        </div>
+      </div>
+    </section>
+    <div class="container">
+      <section class="second-back-img">
+        <div class="watch-content">
+          <h2>
+            Always keep a positive <br />
+            mindset
+          </h2>
+
+          <button class="footer-button">Call Now</button>
+        </div>
+      </section>
+    </div>
+
+    <section class="footer">
+      <div class="end-content">
+        <div>
+          <h1 style="font-size: 38px">Future</h1>
+          <br />
+          <p>
+            There are many variations of passages of Lorem Ipsum <br />
+            available, but the majority have suffered alteration in some <br />
+            form, by injected humour, or randomised words
+          </p>
+          <br />
+          <p>Email: ashfaksikder15@gmail.com</p>
+          <br />
+          <p>Phone: 01618603667</p>
+          <br />
+          <div>
+          <img src="./images/icons/fb.png" alt="">
+          <img style="margin-left: 15px; ;"src="./images/icons/twitter.png" alt="">
+          <img style="margin-left:15px ;"src="./images/icons/youtube.png" alt=""></div>
+        </div>
+        <div class="subscribe">
+          <h2 style="font-size: 25px">Subscribe</h2>
+          <input
+            class="footer-input"
+            type="text"
+            placeholder="Enter your email"
+          /><br />
+          <button class="footer-subscribe">Subscribe</button>
+        </div>
       </div>
     </section>
   </body>
